# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2024-02-13 Michael Truog   <mjtruog at protonmail dot com>

    * Improve cloudi_service_health_check:tcp_test_https/3 SSL options
      when using Erlang/OTP >= 25.0
    * Change the cloudi_task_size module log output to use the trace loglevel
    * Improve the cloudi_task_size module source code

2024-02-05 Michael Truog   <mjtruog at protonmail dot com>

    * Improve cloudi_service_router http_redirect_health error handling
      by only logging errors when a timeout occurs to allow failover
      between separate cloudi_service_health_check instances
    * Add cloudi_service_http_cowboy websockets empty ping handling

2024-01-17 Michael Truog   <mjtruog at protonmail dot com>

    * Fix cloudi_service_router http_redirect_secondaries validation error

2024-01-02 Michael Truog   <mjtruog at protonmail dot com>

    * Add Mastodon README badge

2023-12-06 Michael Truog   <mjtruog at protonmail dot com>

    * Add [[nodiscard]] to the C/C++ CloudI API functions where
      return values need to be checked to avoid service implementation errors

2023-11-29 Michael Truog   <mjtruog at protonmail dot com>

    * Fix 0.0 =/= -0.0 match Erlang/OTP 26.1 warning in cloudi_math eunit test
    * Add C++ std::ignore use
    * Update erlang_term

2023-11-03 Michael Truog   <mjtruog at protonmail dot com>

    * Fix cloudi_service_api_requests json representation of the
      {{M :: atom(), F :: atom(), A :: list()}} closure
      configuration argument format
    * Fix cloudi_service_api_batch queue erl/json requests to provide
      the same data provided by cloudi_service_api_requests
    * Fix C++ backtrace checks when -Werror is in CXXFLAGS

2023-10-27 Michael Truog   <mjtruog at protonmail dot com>

    * CloudI version 2.0.7 released

2023-10-19 Michael Truog   <mjtruog at protonmail dot com>

    * Fix Haskell CloudI API compilation with GHC 9.8 and 9.6
