@@ -30,8 +30,6 @@
 %% @doc
 %%
 %% HTTP client abstraction for erlcloud. Simplifies changing http clients.
-%% API matches lhttpc, except Config is passed instead of options for
-%% future cusomizability.
 %%
 %% @end
 %%%------------------------------------------------------------------------
@@ -42,47 +40,31 @@
 
 -module(nodefinder_ec2_api_httpc).
 
+-include("nodefinder.hrl").
 -include("nodefinder_ec2_api.hrl").
 
--export([request/6]).
+-export([request/7]).
 
--type request_fun() :: 
-    lhttpc | httpc | hackney |
-    {module(), atom()} |
-    fun((string(),
-         head | get | put | post | trace | options | delete,
-         list({binary(), binary()}),
-         binary(), pos_integer(), #aws_config{}) ->
-        {ok, {{pos_integer(), string()},
-              list({string(), string()}), binary()}} |
-        {error, any()}).
--export_type([request_fun/0]).
+-ifdef(ERLANG_OTP_VERSION_25_FEATURES).
+-define(SSL_OPTIONS(Host),
+        [{server_name_indication, Host},
+         {verify, verify_peer},
+         {depth, 100},
+         {cacerts, public_key:cacerts_get()}]).
+-else.
+-define(SSL_OPTIONS(Host), []).
+-endif.
 
-request(URL, Method, Hdrs, Body, Timeout,
-        #aws_config{http_client = lhttpc} = Config) ->
-    request_lhttpc(URL, Method, Hdrs, Body, Timeout, Config);
-request(URL, Method, Hdrs, Body, Timeout,
+request(URL, Method, Host, Hdrs, Body, Timeout,
         #aws_config{http_client = httpc} = Config) ->
-    request_httpc(URL, Method, Hdrs, Body, Timeout, Config);
-request(URL, Method, Hdrs, Body, Timeout,
+    request_httpc(URL, Method, Host, Hdrs, Body, Timeout, Config);
+request(URL, Method, Host, Hdrs, Body, Timeout,
         #aws_config{http_client = hackney} = Config) ->
-    request_hackney(URL, Method, Hdrs, Body, Timeout, Config);
-request(URL, Method, Hdrs, Body, Timeout,
-        #aws_config{http_client = {M, F}} = Config)
-    when is_atom(M), is_atom(F) ->
-    M:F(URL, Method, Hdrs, Body, Timeout, Config);
-request(URL, Method, Hdrs, Body, Timeout,
-        #aws_config{http_client = F} = Config)
-    when is_function(F, 6) ->
-    F(URL, Method, Hdrs, Body, Timeout, Config).
-
-request_lhttpc(URL, Method, Hdrs, Body, Timeout, _Config) ->
-    Module = hide_module(lhttpc),
-    Module:request(URL, Method, Hdrs, Body, Timeout, []).
+    request_hackney(URL, Method, Host, Hdrs, Body, Timeout, Config).
 
 %% Guard clause protects against empty bodied requests from being
 %% unable to find a matching httpc:request call.
-request_httpc(URL, Method, Hdrs, <<>>, Timeout, _Config) 
+request_httpc(URL, Method, Host, Hdrs, <<>>, Timeout, _Config) 
     when (Method =:= options) orelse 
          (Method =:= get) orelse 
          (Method =:= head) orelse 
@@ -90,18 +72,20 @@ request_httpc(URL, Method, Hdrs, <<>>, Timeout, _Config)
          (Method =:= trace) ->
     HdrsStr = [{to_list_string(K), to_list_string(V)} || {K, V} <- Hdrs],
     response_httpc(httpc:request(Method, {URL, HdrsStr},
-                                 [{timeout, Timeout}],
+                                 [{ssl, ?SSL_OPTIONS(Host)},
+                                  {timeout, Timeout}],
                                  [{body_format, binary}]));
-request_httpc(URL, Method, Hdrs, Body, Timeout, _Config) ->
+request_httpc(URL, Method, Host, Hdrs, Body, Timeout, _Config) ->
     HdrsStr = [{to_list_string(K), to_list_string(V)} || {K, V} <- Hdrs],
     {"content-type", ContentType} = lists:keyfind("content-type", 1, HdrsStr),
     response_httpc(httpc:request(Method,
                                  {URL, HdrsStr,
                                   ContentType, Body},
-                                 [{timeout, Timeout}],
+                                 [{ssl, ?SSL_OPTIONS(Host)},
+                                  {timeout, Timeout}],
                                  [{body_format, binary}])).
 
-request_hackney(URL, Method, Hdrs, Body, Timeout,
+request_hackney(URL, Method, Host, Hdrs, Body, Timeout,
                 #aws_config{hackney_pool = Pool}) ->
     BinURL = to_binary(URL),
     BinHdrs = [{to_binary(K), to_binary(V)} || {K, V} <- Hdrs],
@@ -113,7 +97,8 @@ request_hackney(URL, Method, Hdrs, Body, Timeout,
     Module = hide_module(hackney),
     response_hackney(Module:
                      request(Method, BinURL, BinHdrs, Body,
-                             [{recv_timeout, Timeout}] ++ PoolOpt)).
+                             [{ssl_options, ?SSL_OPTIONS(Host)},
+                              {recv_timeout, Timeout}] ++ PoolOpt)).
 
 response_httpc({ok, {{_HTTPVer, Status, StatusLine}, Headers, Body}}) ->
     {ok, {{Status, StatusLine}, Headers, Body}};
